`Updated code for Darshan's website, including CSS, HTML, and image changes.`

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Darshan, a undergraduate student, a app developnment enthusiast, and a guy slighty obsessed for poetry. Also I'm a developer of Poetica. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
+                        <p>Hello! I'm Darshan, a undergraduate student, a app developnment enthusiast, and a guy slighty obsessed for poetry. Also I'm a developing an app called Poetica. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
                         <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -163,21 +163,21 @@
                         <div class="service">
                             <img src="assets/img/front-end.svg" alt="Front End Developer">
                             <h4>Front-end</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
+                            <p>I bring ideas to life on the web through clean, modern designs and responsive user interfaces. With expertise in HTML5, CSS3, and JavaScript, I create seamless experiences using frameworks like Angular and jQuery to craft visually appealing and interactive websites.</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
                             <img src="assets/img/back-end.svg" alt="Back End Developer">
-                            <h4>Back-end</h4>
-                            <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
+                            <h4>Software Developnment</h4>
+                            <p>As a skilled software developer, I build robust and scalable applications using technologies such as Python, Flutter, Swift, and C#. My work spans projects like banking apps, productivity tools, and innovative platforms like Poetica, serving diverse user needs with efficiency and reliability.</p>
                         </div>
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
-                            <h4>Consultancy</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
+                            <img src="assets/img/poetry.svg" alt="Poetry" x="18" width="220" height="43">
+                            <h4>Poetry</h4>
+                            <p>With a deep love for words, I craft poems that resonate with emotions and tell stories of the human spirit. Whether capturing fleeting moments of beauty or exploring profound themes, my writing seeks to inspire, uplift, and connect readers to the art of language.</p>
                         </div>
                     </div>
                 </div>
@@ -259,11 +259,11 @@
             <div class="container">
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="10" data-speed="2000">0</p>
+                        <p class="counter start" data-to="0" data-speed="2000">0</p>
                         <h4>Years Experience</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="120" data-speed="2000">0</p>       
+                        <p class="counter start" data-to="10" data-speed="2000">0</p>       
                         <h4>Projects Delivered</h4>      
                     </div>
                     <div class="col-sm-4 col-xs-12">
@@ -301,13 +301,13 @@
     <footer id="colophon" class="site-footer">
         <div class="container">
             <div class="row">
-                <div class="col-sm-4 col-xs-12">
-                    <a class="icon facebook-bg" href="#"><i class="icon-facebook"></i></a>
+                <div class="col-sm-4 col-xs-3">
+                    <a class="icon facebook-bg" href="https://www.facebook.com/darshan.regmi.737"><i class="icon-facebook"></i></a>
                     <a class="icon twitter-bg" href="#"><i class="icon-twitter"></i></a>
-                    <a class="icon gplus-bg" href="#"><i class="icon-linkedin"></i></a>
-                    <a class="icon linkedin-bg" href="#"><i class="icon-gplus"></i></a>
+                    <a class="icon linkedin-bg" href="#"><i class="icon-linkedin"></i></a>
+                    <a class="icon gplus-bg" href="#"><i class="icon-gplus"></i></a>
                 </div>
-                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2017. All Rights Reserved</p></div>
+                <div class="col-sm-4 col-sm-offset-0 col-xs-6 col-xs-offset-3"><p class="copyright">2025. All Rights Reserved</p></div>
                 <div class="col-sm-4 col-xs-3">
                     <div class="text-right page-scroll">
                         <a class="icon icon-up-bg" href="#hero"><i class="icon-up"></i></a>
